feat: secure carRouter
