# src/docs/swagger_output.json
@@ -1,12 +1,12 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Split API",
-    "description": "API for split",
+    "title": "Barrel API",
+    "description": "API for barrel",
     "version": "1.0.0"
   },
   "host": [
-    "api.split-app.fr"
+    "api.youre-domain.fr"
   ],
   "basePath": "/",
   "schemes": [
@@ -125,7 +125,7 @@
         "tags": [
           "Auth"
         ],
-        "description": "Seconde route une fois que tu as utilisé la première route pour utiliser un service tiers, elle attend les infos complémentaires pour que le compte soit valide",
+        "description": "Seconde routes une fois que tu as utilisé la première routes pour utiliser un service tiers, elle attend les infos complémentaires pour que le compte soit valide",
         "parameters": [
           {
             "name": "authorization",
@@ -516,41 +516,6 @@
         }
       }
     },
-    "/user/friends": {
-      "get": {
-        "tags": [
-          "User"
-        ],
-        "description": "Get user friends.",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "User friends retrieved successfully.",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/User"
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "422": {
-            "description": "Unprocessable Entity"
-          }
-        }
-      }
-    },
     "/user/refresh-token/{refreshToken}": {
       "get": {
         "tags": [
@@ -597,162 +562,159 @@
           }
         }
       }
+    },
+    "/car": {
+      "get": {
+        "tags": [
+          "Car"
+        ],
+        "description": "Get all the cars.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Car"
+        ],
+        "description": "Create a new car.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Car"
+        ],
+        "description": "Delete a car.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/entry": {
+      "get": {
+        "tags": [
+          "Entry"
+        ],
+        "description": "Get one entry.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Entry"
+        ],
+        "description": "Create one entry.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Entry creation data",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Entry"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Entry"
+        ],
+        "description": "Edit one entry.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "mileage": {
+                  "example": "any"
+                },
+                "price": {
+                  "example": "any"
+                },
+                "liter": {
+                  "example": "any"
+                },
+                "date": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Entry"
+        ],
+        "description": "Delete one entry.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
     }
   },
   "definitions": {
-    "Expense": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "number",
-          "example": 1
-        },
-        "name": {
-          "type": "string",
-          "example": "Expense name"
-        },
-        "payBy": {
-          "$ref": "#/definitions/User"
-        },
-        "date": {
-          "type": "string",
-          "example": "2024-06-03"
-        },
-        "editedAt": {
-          "type": "string",
-          "example": "2024-06-03"
-        },
-        "amount": {
-          "type": "number",
-          "example": 100.5
-        },
-        "imageLink": {
-          "type": "string",
-          "example": "https://example.com/image.jpg"
-        },
-        "group": {
-          "$ref": "#/definitions/Group"
-        },
-        "expenseParticipations": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/ExpenseParticipation"
-          }
-        },
-        "isRefund": {
-          "type": "boolean",
-          "example": true
-        },
-        "currency": {
-          "type": "boolean",
-          "example": true
-        }
-      }
-    },
-    "ExpenseParticipation": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "number",
-          "example": 1
-        },
-        "participant": {
-          "$ref": "#/definitions/User"
-        },
-        "amount": {
-          "type": "number",
-          "example": 50.25
-        },
-        "imageLink": {
-          "type": "string",
-          "example": "https://example.com/image.jpg"
-        },
-        "expense": {
-          "$ref": "#/definitions/Expense"
-        }
-      }
-    },
-    "Friends": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "number",
-          "example": 1
-        },
-        "user1": {
-          "$ref": "#/definitions/User"
-        },
-        "user2": {
-          "$ref": "#/definitions/User"
-        }
-      }
-    },
-    "FriendsRequest": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "number",
-          "example": 1
-        },
-        "asker": {
-          "$ref": "#/definitions/User"
-        },
-        "receiver": {
-          "$ref": "#/definitions/User"
-        }
-      }
-    },
-    "Group": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "number",
-          "example": 1
-        },
-        "owner": {
-          "$ref": "#/definitions/User"
-        },
-        "name": {
-          "type": "string",
-          "example": "Group name"
-        },
-        "currency": {
-          "type": "string",
-          "example": "USD"
-        },
-        "showShareCard": {
-          "type": "boolean",
-          "example": true
-        },
-        "imageLink": {
-          "type": "string",
-          "example": "https://example.com/image.jpg"
-        },
-        "participants": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/User"
-          }
-        }
-      }
-    },
-    "PaymentMethod": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "number",
-          "example": 1
-        },
-        "name": {
-          "type": "string",
-          "example": "Payment method name"
-        },
-        "value": {
-          "type": "string",
-          "example": "Payment method value"
-        }
-      }
-    },
     "User": {
       "type": "object",
       "properties": {
