# src/index.ts
@@ -9,6 +9,7 @@ import { Server } from "socket.io";
 import * as swStats from "swagger-stats";
 import { AppDataSource } from "./database/datasource";
 import * as swaggerJsonFile from "./docs/swagger_output.json";
+import { apiTokenMiddleware } from "./middlewares/checkApiToken";
 import { authRouter } from "./routes/auth";
 import { carRouter } from "./routes/car";
 import { entryRouter } from "./routes/entry";
@@ -41,8 +42,8 @@ export class Index {
   static routeConfig() {
     Index.app.use("/user", userRouter);
     Index.app.use("/auth", authRouter);
-    Index.app.use("/entry", entryRouter);
-    Index.app.use("/car", carRouter);
+    Index.app.use("/entry", apiTokenMiddleware, entryRouter);
+    Index.app.use("/car", apiTokenMiddleware, carRouter);
   }
 
   static swaggerConfig() {
